# ghosty

./: .env.example  .gitignore  API_KEY_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETED_IMPROVEMENTS.md  IMPROVEMENTS.md  LICENSE  PHASE-1-COMPLETE.md  README.md  TASK-002-VALIDATION-FRONTEND.md  TASK-003-CACHE-API-KEY.md  TEST_API_KEY.md  eslint.config.js  index.html  package-lock.json  package.json  test.sh  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: CREATING-A-RELEASE.md  CREER-UNE-RELEASE.md  GETTING-STARTED.md  GHOSTY-MODES-METHODOLOGY.md  GUIDE-TESTS-MANUELS.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  KEYBOARD-SHORTCUTS.md  MAGIC-KEYWORDS-DEFINITION-DEMO.md  MANUAL-TESTING-GUIDE.md  PRODUCTION-READINESS.md  PROJECT_CHARTER.md  QUICKSTART.md  README.md  UI-RULES.md  cursor-prompt-level-1.md  cursor-prompt-level-2.md  cursor-prompt-level-3.md  cursor-prompt-level-4.md  cursor-prompt-level-5.md  ghosty-prompting-rules.md  prompt-enhancement-cursor.md  prompting-dense-library.md
docs/internal/: AUDIT-SERVICES-CLIC-DROIT.md  AUDIT-WORDINGS-GLOBAUX.md  DICTIONARY-QUICKSTART.md  DICTIONARY-SYSTEM.md  GHOSTY-MODES-METHODOLOGY.md  README.md  SERVICES-CLIC-DROIT-MACOS.md  SHORTCUTS-SYSTEM-COMPLETE.md  STRATEGIE-IMPLEMENTATION-FONCTIONNALITES.md  VERIFICATION-DOC-CODE.md  ghosty-prompting-rules.md  magic-keywords-prompt-engineering.md  prompt-enrichment-jargon-methodology.md  prompting-dense-library.md
scripts/: dev-app-run.sh  dev-app-wrapper.sh  release.sh
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: accessibility.rs  audio.rs  clipboard.rs  correction_detector.rs  dictionary.rs  edit_commands.rs  errors.rs  hotkey.rs  http_client.rs  lib.rs  llm.rs  main.rs  modes.rs  preferences.rs  prompt_state.rs  secrets.rs  services_installer.rs  shortcuts.rs  snippets.rs  transcribe.rs  usage.rs  voice_commands.rs
src/api/: tauri.test.ts  tauri.ts
src/components/: AddWordModal.test.tsx  AddWordModal.tsx  Dashboard.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FloatingBar-BACKUP.tsx  FloatingBar.tsx  NotificationsPanel.test.tsx  NotificationsPanel.tsx  (+7 more)
(+43 files in other folders)
