[package]
name = "ghosty"
version = "0.1.0"
description = "Voice-to-text with global hotkey"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "ghosty_lib"
# Desktop only: "lib" suffit. cdylib/staticlib ajoutent des étapes de link qui peuvent bloquer sur macOS.
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = { version = "2", features = [] }
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7"
arboard = "3.2"
dotenvy = "0.15"
enigo = "0.2"
tempfile = "3.14"
once_cell = "1.19"
mouse_position = "0.1"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
